Added new endpoint for student
