# src/main/resources/openapi.yaml
@@ -206,7 +206,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /students/list/{name}:
+  /students/findByName/{name}:
     get:
       tags:
         - student
@@ -229,6 +229,79 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/ResponseStudentDto'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: User not found
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /students/findByLastName/{lastName}:
+    get:
+      tags:
+        - student
+      summary: Get list student by last name.
+      description: Get list student by last name.
+      operationId: getListStudentByLastName
+      parameters:
+        - name: lastName
+          in: path
+          required: true
+          description: Last name of student
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ResponseStudentDto'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: User not found
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /students/updateByDocument/{document}:
+    put:
+      tags:
+        - student
+      summary: Put student by document.
+      description: Put student by document.
+      operationId: updateStudentByDocument
+      parameters:
+        - name: document
+          in: path
+          required: true
+          description: Document of student
+          schema:
+            type: string
+      requestBody:
+        description: Created user object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestStudentDto'
+        required: true
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseStudentDto'
         '400':
           description: Invalid ID supplied
         '404':
